Trying to fix BG issues on Mobile
responsive design change BG for Mobiles

--- a/css/custom.css
+++ b/css/custom.css
@@ -144,6 +144,18 @@ p {
 		padding: 0px 30px;
 	}
 
+	.jumbotron {
+		background-image: url(../images/CDMxM.jpg);
+	}
+
+	.j2{
+		background-image: url(../images/hackM.jpg);
+	}
+
+	#about{
+		background-color: white;
+	}
+
 	#hammer{
 		margin: 20px 20px;
 	}
